--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,6 +33,7 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "concurrently": "^9.1.2",
+    "stripe": "^17.5.0",
     "typescript": "^5.7.2"
   }
 }
